[project]
name = "gpu-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jonathan Scheer", email = "jonatron@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
gpu_api = "gpu_api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
