[project]
authors = [
  {name = "Jonathan Scheer", email = "jonatron@gmail.com"},
]
dependencies = []
description = "Add your description here"
name = "gpu-api"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[project.scripts]
gpu_api = "gpu_api:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
